# InfantAgent

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile_vllm  README.md  VLLM_SETUP.md  agent_cli.sh  backend.py  config.toml  docker-compose.yaml  pyproject.toml  send_prompt.py
evaluation/gaia/: Dockerfile  GeForce-XorgDisplaySettingAuto.sh  README.md  Tesla-XorgDisplaySettingAuto.sh  download_dataset.py  evaluation.py  extract_final.py  predictions.jsonl  run_inference.py  vulkan-ubuntu-22.04.sh
evaluation/osworld/: Dockerfile  README.md  run_infer_script.py  run_inference.py
evaluation/screenspot_pro/: README.md  download_dataset.py  run_inference.py  test_rec_r1_sspro.py  test_sspro.sh
evaluation/swe_bench/: Dockerfile  README.md  evaluation.py  instance_swe_entry.sh  run_inference.py  subtestset_id.txt
examples/: README.md
examples/extract_figure/: log.txt  run.py
examples/extract_table/: log.txt  run.py
examples/make_slides/: log.txt  presentation.pptx  run.py
frontend/: index.html  package-lock.json  package.json  server.py
frontend/css/: styles.css
frontend/js/: backend-connector.js  script.js
frontend/src/: App.css  App.jsx
infant/: __main__.py  config.py  main.py  server.py  test_ws_chat.py
infant/agent/: agent.py  parser.py
infant/computer/: Dockerfile  GeForce-XorgDisplaySettingAuto.sh  README.md  Tesla-XorgDisplaySettingAuto.sh  computer.py  run_docker_default.sh  run_test.sh
infant/helper_functions/: audio_helper_function.py  browser_helper_function.py  file_edit_helper_function.py  mouse_click.py  setting_up.py  toolmaker_helper_function.py  video_helper_function.py  visual_helper_functions.py
infant/llm/: llm_api_base.py  llm_oss_base.py
infant/prompt/: classification_prompt.py  critic_prompt.py  execution_prompt.py  localization_prompt.py  parse_user_input.py  (+6 more)
test/: test_config.py
tests/: __init__.py  conftest.py
(+74 files in other folders)
