[project]
name = "InfantAI"
version = "0.1.0"
description = "InfantAI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "InfantAI" }]
requires-python = ">=3.11"

dependencies = [
  "datasets",
  "pandas",
  "litellm",
  "google-generativeai",
  "termcolor",
  "seaborn",
  "docker",
  "fastapi",
  "toml",
  "uvicorn",
  "types-toml",
  "numpy",
  "json-repair",
  "browsergym==0.3.4",
  "html2text",
  "e2b>=1",
  "jinja2>=3.1.3,<4",
  "python-multipart",
  "boto3",
  "minio>=7.2.7,<8",
  "gevent>=24.2.1,<25",
  "pyarrow==16.1.0",
  "tenacity>=8.4.1,<9",
  "zope-interface==6.4.post2",
  "pexpect>=4.9.0,<5",
  "pydrive",
  "requests_toolbelt",
  "rapidfuzz",
  "formulas",
  "lxml==5.3.1",
  "cssselect",
  "xmltodict",
  "fitz",
  "tools",
  "borb",
  "easyocr",
  "odf",
  "odfpy",
  "pdfplumber",
  "mutagen",
  "pyacoustid",
  "imagehash",
  "librosa",
  "fastdtw",
  "selenium",
  "moviepy",
  "ruff==0.4.9",
  "mypy==1.10.0",
  "pre-commit==3.7.1",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-forked",
  "flake8",
  "openai",
  "python-docx",
  "PyPDF2",
  "pylatexenc",
  "python-pptx",
  "opencv-python",
  "pandas",
  "reportlab",
  "streamlit",
  "whatthepatch",
  "retry",
  "evaluate",
  "swebench @ git+https://github.com/All-Hands-AI/SWE-bench.git@main",
  "llama-index",
  "llama-index-vector-stores-chroma",
  "chromadb",
  "llama-index-embeddings-huggingface",
  "torch>=2.4.0,<3",
  "vllm==0.6.0",
  "llama-index-embeddings-azure-openai",
  "llama-index-embeddings-ollama",
]

[tool.coverage.run]
concurrency = ["gevent"]

[tool.autopep8]
ignore = ["E501"]

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["infant*"]
